--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
     "serve": "npx http-server ."
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
+    "@aws-amplify/backend": "^1.16.1",
+    "@aws-amplify/backend-cli": "^1.8.0",
     "@types/node": "^20.0.0",
-    "concurrently": "^8.2.0"
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "aws-cdk-lib": "^2.204.0",
+    "concurrently": "^8.2.0",
+    "constructs": "^10.4.2",
+    "esbuild": "^0.25.8",
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2"
   },
   "dependencies": {
+    "aws-amplify": "^6.15.4",
     "gridstack": "^10.3.1"
   }
-} 
+}
