--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=18.0.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aws-amplify/backend": "latest",
+    "@aws-amplify/backend": "^1.10.1",
     "@types/gridstack": "^0.5.0",
-    "aws-amplify": "latest",
+    "aws-amplify": "^6.15.0",
     "gridstack": "^12.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
