Fix Amplify backend build: use npm install instead of npm ci

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ backend:
   phases:
     build:
       commands:
-        - npm ci --prefix amplify
+        - npm install --prefix amplify
 frontend:
   phases:
     preBuild:
