Fix TypeScript error: add type declarations for amplify_outputs.json and improve error handling

--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,7 @@ backend:
     build:
       commands:
         - npm install --prefix amplify
+        - npx ampx generate outputs --format json --out-dir .
 frontend:
   phases:
     preBuild:
