--- a/amplify.yml
+++ b/amplify.yml
@@ -4,12 +4,12 @@ backend:
     preBuild:
       commands:
         - nvm use 20
-        - npm ci --prefix amplify
+        - cd amplify && npm install && cd ..
     build:
       commands:
-        - npm run --prefix amplify build
-        - node amplify/dist/backend.js
-        - cp amplify/outputs.json amplify_outputs.json
+        - cd amplify && npm run build && cd ..
+        - cd amplify && node dist/backend.js && cd ..
+        - cp amplify/outputs.json amplify_outputs.json || echo "No outputs.json file generated"
 frontend:
   phases:
     preBuild:
