Add explicit backend section to force recognition of Gen 2 backend

--- a/amplify.yml
+++ b/amplify.yml
@@ -2,7 +2,8 @@ version: 1
 backend:
   phases:
     build:
-      commands: []
+      commands:
+        - echo "Backend deployment should happen automatically"
 frontend:
   phases:
     preBuild:
