Fix npm ci sync error: switch to npm install for amplify dependencies

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,7 +3,7 @@ backend:
   phases:
     preBuild:
       commands:
-        - cd amplify && npm ci
+        - cd amplify && npm install
     build:
       commands:
         - cd amplify && npx ampx sandbox --once --identifier=main
